--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
       <th>Team</th>
       <th>Avatar</th>
       <th colspan="3"></th>
@@ -16,7 +17,7 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.team.name %></td>
-        <td><%= user.avatar %></td>
+        <td><%= image_tag user.avatar %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
