--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Avatar:</strong>
-  <%= image_tag @user.avatar.thumb %>
+  <%= image_tag @user.avatar %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
